--- a/docker-framework/framework-test/Jenkinsfile
+++ b/docker-framework/framework-test/Jenkinsfile
@@ -1,89 +1,23 @@
-
-
 node {
+  // Mark the code checkout 'stage'....
+  stage 'Checkout'
 
-   // Get some code from a GitHub repository
+  // Get some code from a GitHub repository
   git url: 'https://github.com/lyqwaterway/docker-lifecycle-scripts'
   def artServer = Artifactory.server('artiha-demo')
-  withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'art-docker-ci',
-  usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD']]) {
+  withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'art-docker-ci', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD']]) {
     def uname=env.USERNAME
     def pw=env.PASSWORD
     artServer.username=uname
     artServer.password=pw
+    sh 'echo credentials applied'
     def curlstr="curl -u"+uname+':'+pw+" 'http://beijing.artifactory.com/artifactory/"
-    def artDocker= Artifactory.docker(uname, pw)
-    def buildInfo = Artifactory.newBuildInfo()
-    dir('docker-framework') {
-      buildInfo.env.capture = true
-      // Mark the code checkout 'stage'....
-      sh 'ls -al'
-      stage('Resolve') {
-        def tomcatverstr=curlstr+ "api/search/latestVersion?g=org.apache&a=apache-tomcat&repos=tomcat-local'"
-        println(tomcatverstr)
-        sh tomcatverstr+' > tomcat/version.txt'
-        env.TOMCAT_VERSION=readFile('tomcat/version.txt')
-        sh 'echo $TOMCAT_VERSION'
-        //sh 'rm -rf docker-framework/tomcat'
-        //sh 'rm -rf docker-framework/jdk'
-        
-        def downloadSpec = """{
-         "files": [
-          {
-           "pattern": "tomcat-local/java/jdk-8u91-linux-x64.tar.gz",
-           "target": "jdk/jdk-8-linux-x64.tar.gz",
-           "flat":"true"
-          },
-          {
-           "pattern": "tomcat-local/org/apache/apache-tomcat/apache-tomcat-"""+env.TOMCAT_VERSION+""".tar.gz",
-           "target": "tomcat/apache-tomcat-8.tar.gz",
-           "flat":"true"
-          }
-          ]
-        }"""
-
-        artServer.download(downloadSpec, buildInfo)
-        sh 'pwd'
-        sh 'ls -al jdk'
-        sh 'ls -al tomcat'
-        sh 'echo download complete'
-      }
-      stage('docker build') {
-        buildInfo.env.collect()
-        println('starting build '+env.BUILD_NUMBER)
-        def tagName='beijing.artifactory.com:5002/docker-framework:'+env.BUILD_NUMBER
-        sh 'pwd'
-        sh 'ls -al'
-        sh 'cat Dockerfile'
-        docker.build(tagName)
-        artDocker.push(tagName, 'docker-dev-local2', buildInfo)
-        artServer.publishBuildInfo(buildInfo)
-        println('Retagging Image')
-        sh 'sed -E "s/@/$BUILD_NUMBER/" retag.json > retag_out.json'
-        sh 'cat retag_out.json'
-        def retagstr=curlstr+"api/docker/docker-release-local2/v2/promote' -X POST -H 'Content-Type: application/json' -T retag_out.json"
-      }
-    }
-  }
-}
-node {
-  git url: 'https://github.com/lyqwaterway/docker-lifecycle-scripts'
-  def artServer = Artifactory.server('artiha-demo')
-  withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'art-docker-ci',
-  usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD']]) {
-    def uname=env.USERNAME
-    def pw=env.PASSWORD
-    artServer.username=uname
-    artServer.password=pw
-    def curlstr="curl -u"+uname+':'+pw+" 'http://beijing.artifactory.com/artifactory/"
-    def artDocker= Artifactory.docker(uname, pw)
+    stage 'testing'
     dir('docker-framework/framework-test')
     {
-      stage('testing') {
-        println('Get the latest version of the tomcat war from libs-release-local repo.  We only want war files that have been released')
         def warverstr=curlstr+ "api/search/latestVersion?g=org.jfrog.example.gradle&a=webservice&repos=libs-release-local'"
-        sh warverstr +' > war/version.txt'
-        env.WARVER=readFile('war/version.txt')
+       sh warverstr +' > war/version.txt'
+       env.WARVER=readFile('war/version.txt')
         def downloadSpecWar = """{
  "files": [
   {
@@ -92,38 +26,18 @@ node {
    "flat":"true"
   }
   ]
-}""" //"//DownloadSpec
-        println(downloadSpecWar)
-        artServer.download(downloadSpecWar)
+}"""
+    println(downloadSpecWar)
+    artServer.download(downloadSpecWar)
         def tagNameTest='beijing.artifactory.com:5002/docker-framework-test:'+env.BUILD_NUMBER
         docker.build(tagNameTest)
-        docker.image(tagNameTest).withRun('-p 8181:8181') {c ->
-          sleep 5
-          sh 'curl "http://localhost:8181/swampup/"'
-        }
-      }
-      stage('promote') {
-        def promotionConfig = [
-          // Mandatory parameters
-          'buildName'          : env.JOB_NAME,
-          'buildNumber'        : env.BUILD_NUMBER,
-          'targetRepo'         : 'docker-release-local2',
-
-          // Optional parameters
-          'comment'            : 'Framework works with latest version of application to pass test',
-          'sourceRepo'         : 'docker-dev-local2',
-          'status'             : 'Released',
-          'includeDependencies': false,
-          'copy'               : true
-        ]
-
-        // Promote build
-        artServer.promote promotionConfig
-        sh 'sed -E "s/@/$BUILD_NUMBER/" retag.json > retag_out.json'
-        sh 'cat retag_out.json'
-        def retagstr=curlstr+"api/docker/docker-release-local2/v2/promote' -X POST -H 'Content-Type: application/json' -T retag_out.json"
-        sh retagstr
-      }
+withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'gcart-markg',
+usernameVariable: 'GCUSERNAME', passwordVariable: 'GCPASSWORD']]) { 
+    gcuname=env.GCUSERNAME
+    gcpw=env.GCPASSWORD
+    gcDocker=Artifactory.docker(gcuname, gcpw)
+    gcDocker.push(tagNameTest, 'docker-dev-local2')
+}
     }
-  }
+}
 }
