--- a/docker-framework/Dockerfile
+++ b/docker-framework/Dockerfile
@@ -1,6 +1,6 @@
-FROM jfrogtraining-docker-dev.jfrog.io/ubuntu:latest
+FROM ubuntu:latest
 
-MAINTAINER Mark Galpin markg@jfrog.com
+MAINTAINER Mark Galpin liuyq@jfrog.com
 
 RUN /bin/bash -c cd ~; cd /home ; mkdir -p exec
 ADD jdk/jdk-8-linux-x64.tar.gz /home/exec
