--- a/docker-framework/Jenkinsfile
+++ b/docker-framework/Jenkinsfile
@@ -56,7 +56,7 @@ node {
         sh 'ls -al'
         sh 'cat Dockerfile'
         docker.build(tagName)
-        artDocker.push(tagName, 'docker-dev-local2', buildInfo)
+       // artDocker.push(tagName, 'docker-dev-local2', buildInfo)
         artServer.publishBuildInfo(buildInfo)
         println('Retagging Image')
         sh 'sed -E "s/@/$BUILD_NUMBER/" retag.json > retag_out.json'
