--- a/docker-framework/Jenkinsfile
+++ b/docker-framework/Jenkinsfile
@@ -56,8 +56,9 @@ node {
         sh 'ls -al'
         sh 'cat Dockerfile'
         docker.build(tagName)
-        sh 'docker push ' + tagName
        // artDocker.push(tagName, 'docker-dev-local2', buildInfo)
+        sh 'docker push ' + tagName
+        sh 'docker push beijing.artifactory.com:5001/docker-framework:'+env.BUILD_NUMBER
         artServer.publishBuildInfo(buildInfo)
         println('Retagging Image')
         sh 'sed -E "s/@/$BUILD_NUMBER/" retag.json > retag_out.json'
