--- a/docker-framework/Jenkinsfile
+++ b/docker-framework/Jenkinsfile
@@ -64,9 +64,10 @@ node {
         //sh 'docker push beijing.artifactory.com:5001/docker-framework:'+env.BUILD_NUMBER
         artServer.publishBuildInfo(buildInfo)
         println('Retagging Image')
-        sh 'sed -E "s/@/$BUILD_NUMBER/" retag.json > retag_out.json'
+        sh 'sed -E "s/@/$BUILD_NUMBER/" retag-dev.json > retag_out.json'
         sh 'cat retag_out.json'
-        def retagstr=curlstr+"api/docker/docker-release-local2/v2/promote' -X POST -H 'Content-Type: application/json' -T retag_out.json"
+        def retagstr=curlstr+"api/docker/docker-dev-local2/v2/promote' -X POST -H 'Content-Type: application/json' -T retag_out.json"
+         sh retagstr
       }
     }
   }
@@ -124,7 +125,7 @@ node {
 
         // Promote build
         artServer.promote promotionConfig
-        sh 'sed -E "s/@/$BUILD_NUMBER/" retag.json > retag_out.json'
+        sh 'sed -E "s/@/$BUILD_NUMBER/" retag-release.json > retag_out.json'
         sh 'cat retag_out.json'
         def retagstr=curlstr+"api/docker/docker-release-local2/v2/promote' -X POST -H 'Content-Type: application/json' -T retag_out.json"
         sh retagstr
