--- a/docker-app/Jenkinsfile
+++ b/docker-app/Jenkinsfile
@@ -1,6 +1,6 @@
 node {
    //def artServer = Artifactory.newServer url: SERVER_URL, credentialsId: CREDENTIALS
-  def artServer = Artifactory.server('jfrogtraining')
+  def artServer = Artifactory.server('artiha-demo')
    artServer.credentialsId='art-docker-ci'
    def buildInfo = Artifactory.newBuildInfo()
    stage 'Checkout Gradle'
@@ -13,8 +13,8 @@ dir('gradle-examples/4/gradle-example-ci-server') {
         //def server = Artifactory.newServer url: SERVER_URL, credentialsId: CREDENTIALS
         def artifactoryGradle = Artifactory.newGradleBuild()
         artifactoryGradle.tool = 'gradle' // Tool name from Jenkins configuration
-        artifactoryGradle.deployer repo:'libs-dev-local', server: artServer
-        artifactoryGradle.resolver repo:'libs-dev', server: artServer
+        artifactoryGradle.deployer repo:'libs-snapshot-local', server: artServer
+        artifactoryGradle.resolver repo:'libs-snapshot', server: artServer
         artifactoryGradle.run rootDir: "gradle-examples/4/gradle-example-ci-server/", buildFile: 'build.gradle', tasks: 'clean artifactoryPublish', buildInfo: buildInfo
 
 
@@ -22,7 +22,7 @@ dir('gradle-examples/4/gradle-example-ci-server') {
    stage('Checkout Docker') {
 
    // Get some code from a GitHub repository
-   git url: 'https://github.com/jfrogtraining/docker-lifecycle-scripts'
+   git url: 'https://github.com/lyqwaterway/docker-lifecycle-scripts'
    }
    //def artServer = Artifactory.server('jfrogtraining')
    //def buildInfo = Artifactory.newBuildInfo()
@@ -34,16 +34,16 @@ def pw=env.PASSWORD
 artServer.username=uname
 artServer.password=pw
  sh 'echo credentials applied'
- def curlstr="curl -u"+uname+':'+pw+" 'https://jfrogtraining.jfrog.io/jfrogtraining/"
+ def curlstr="curl -u"+uname+':'+pw+" 'http://beijing.artifactory.com/artifactory/"
 dir('docker-app') {
    stage('Resolve') {
-       def warverstr=curlstr+ "api/search/latestVersion?g=org.jfrog.example.gradle&a=webservice&repos=libs-dev'"
+       def warverstr=curlstr+ "api/search/latestVersion?g=org.jfrog.example.gradle&a=webservice&repos=libs-snapshot'"
        sh warverstr +' > war/version.txt'
        env.WARVER=readFile('war/version.txt')
         def downloadSpec = """{
  "files": [
   {
-   "pattern": "libs-dev/org/jfrog/example/gradle/webservice/"""+env.WARVER+"""/*.war",
+   "pattern": "libs-snapshot/org/jfrog/example/gradle/webservice/"""+env.WARVER+"""/*.war",
    "target": "war/webservice.war",
    "flat":"true"
   }
@@ -53,10 +53,14 @@ dir('docker-app') {
     artServer.download(downloadSpec, buildInfo)
    }
    stage('Build and Deploy') {
-        def tagName='jfrogtraining-docker-dev.jfrog.io/docker-app:'+env.BUILD_NUMBER
+        def tagName='beijing.artifactory.com:5002/docker-app:'+env.BUILD_NUMBER
         docker.build(tagName)
         def artDocker= Artifactory.docker(uname, pw)
-        artDocker.push(tagName, 'docker-dev-local', buildInfo)
+        //artDocker.push(tagName, 'docker-dev-local2', buildInfo)
+        sh 'docker push ' + tagName
+        def tagName2='beijing.artifactory.com:5001/docker-app:'+env.BUILD_NUMBER
+        sh 'docker tag ' + tagName + ' ' + tagName2
+        sh 'docker push ' + tagName2
         artServer.publishBuildInfo(buildInfo)
         //sh 'sed -E "s/@/$BUILD_NUMBER/" retag.json > retag_out.json'
         //sh 'cat retag_out.json'
@@ -67,8 +71,8 @@ dir('docker-app') {
 }
 }
 node {
-    git url: 'https://github.com/jfrogtraining/docker-lifecycle-scripts'
-    def artServer = Artifactory.server('jfrogtraining')
+    git url: 'https://github.com/lyqwaterway/docker-lifecycle-scripts'
+    def artServer = Artifactory.server('artiha-demo')
     withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'art-docker-ci',
 usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD']]) {
 def uname=env.USERNAME
@@ -76,10 +80,10 @@ def pw=env.PASSWORD
 artServer.username=uname
 artServer.password=pw
         def artDocker= Artifactory.docker(uname, pw)
-def curlstr="curl -u"+uname+':'+pw+" 'https://jfrogtraining.jfrog.io/jfrogtraining/"
+def curlstr="curl -u"+uname+':'+pw+" 'http://beijing.artifactory.com/artifactory/"
     dir('docker-app/app-test') {
         stage('testing app') {
-            def imageName='jfrogtraining-docker-dev.jfrog.io/docker-app'+':'+env.BUILD_NUMBER
+            def imageName='beijing.artifactory.com:5002/docker-app'+':'+env.BUILD_NUMBER
             sh 'docker images | grep docker-app'
             println(imageName)
             sh 'docker rmi '+imageName+' || true'
