--- a/docker-app/Jenkinsfile
+++ b/docker-app/Jenkinsfile
@@ -6,7 +6,7 @@ node {
    stage 'Checkout Gradle'
         git url: 'https://github.com/jfrogtraining/project-examples.git'
 dir('gradle-examples/4/gradle-example-ci-server') {
- sh './increment.sh'
+ //sh './increment.sh'
 }
 
     stage 'Build Gradle'
