--- a/docker-app/Jenkinsfile
+++ b/docker-app/Jenkinsfile
@@ -2,8 +2,16 @@ node {
    //def artServer = Artifactory.newServer url: SERVER_URL, credentialsId: CREDENTIALS
   def artServer = Artifactory.server('artiha-demo')
    artServer.credentialsId='art-docker-ci'
+  def rtMaven = Artifactory.newMavenBuild()
+  stage 'Checkout MAVEN'
+  git url: 'https://github.com/lyqwaterway/project-examples.git'
+  
+  stage 'Build Maven'
   def buildInfo = Artifactory.newBuildInfo()
-
+  rtMaven.resolver server: server, releaseRepo: 'libs-release', snapshotRepo: 'libs-snapshot'
+  rtMaven.deployer server: server, releaseRepo: 'libs-release-local', snapshotRepo: 'libs-snapshot-local'
+  rtMaven.tool = 'maven'
+   rtMaven.run pom: 'maven-example/pom.xml', goals: 'clean install', buildInfo: buildInfo
    // Mark the code checkout 'stage'....
    stage('Checkout Docker') {
    // Get some code from a GitHub repository
@@ -92,7 +100,7 @@ def curlstr="curl -u"+uname+':'+pw+" 'http://beijing.artifactory.com/artifactory
             // Promote build
             sh 'sed -E "s/@/$BUILD_NUMBER/" retag.json > retag_out.json'
             sh 'cat retag_out.json'
-            def retagstr=curlstr+"api/docker/docker-prod-local/v2/promote' -X POST -H 'Content-Type: application/json' -T retag_out.json"
+            def retagstr=curlstr+"api/docker/docker-release-local2/v2/promote' -X POST -H 'Content-Type: application/json' -T retag_out.json"
             sh retagstr
             //println(env.WARVER)
             }
