--- a/docker-app/Jenkinsfile
+++ b/docker-app/Jenkinsfile
@@ -30,13 +30,13 @@ artServer.password=pw
  def curlstr="curl -u"+uname+':'+pw+" 'http://beijing.artifactory.com/artifactory/"
 dir('docker-app') {
    stage('Resolve') {
-       def warverstr=curlstr+ "api/search/latestVersion?g=org.jfrog.example.gradle&a=webservice&repos=libs-snapshot-local'"
+       def warverstr=curlstr+ "api/search/latestVersion?g=org.jfrog.test&a=multi3&repos=libs-snapshot-local'"
        sh warverstr +' > war/version.txt'
        env.WARVER=readFile('war/version.txt')
         def downloadSpec = """{
  "files": [
   {
-   "pattern": "libs-snapshot-local/org/jfrog/example/gradle/webservice/"""+env.WARVER+"""/*.war",
+   "pattern": "libs-snapshot-local/org/jfrog/test/multi3/"""+env.WARVER+"""/*.war",
    "target": "war/webservice.war",
    "flat":"true"
   }
