--- a/docker-app/Jenkinsfile
+++ b/docker-app/Jenkinsfile
@@ -9,8 +9,8 @@ node {
   stage 'Build Maven'
   def rtMaven = Artifactory.newMavenBuild()
   
-  rtMaven.resolver server: server, releaseRepo: 'libs-release', snapshotRepo: 'libs-snapshot'
-  rtMaven.deployer server: server, releaseRepo: 'libs-release-local', snapshotRepo: 'libs-snapshot-local'
+  rtMaven.resolver server: artServer, releaseRepo: 'libs-release', snapshotRepo: 'libs-snapshot'
+  rtMaven.deployer server: artServer, releaseRepo: 'libs-release-local', snapshotRepo: 'libs-snapshot-local'
   rtMaven.tool = 'maven'
    rtMaven.run pom: 'maven-example/pom.xml', goals: 'clean install', buildInfo: buildInfo
    // Mark the code checkout 'stage'....
