--- a/docker-app/Jenkinsfile
+++ b/docker-app/Jenkinsfile
@@ -12,7 +12,7 @@ node {
   rtMaven.resolver server: artServer, releaseRepo: 'libs-release', snapshotRepo: 'libs-snapshot'
   rtMaven.deployer server: artServer, releaseRepo: 'libs-release-local', snapshotRepo: 'libs-snapshot-local'
   rtMaven.tool = 'maven'
-   rtMaven.run pom: 'maven-example/pom.xml', goals: 'clean install', buildInfo: buildInfo
+   rtMaven.run pom: 'maven-example/pom.xml', goals: 'clean deploy', buildInfo: buildInfo
    // Mark the code checkout 'stage'....
    stage('Checkout Docker') {
    // Get some code from a GitHub repository
