--- a/docker-app/Jenkinsfile
+++ b/docker-app/Jenkinsfile
@@ -10,7 +10,7 @@ node {
   def rtMaven = Artifactory.newMavenBuild()
   
   rtMaven.resolver server: artServer, releaseRepo: 'libs-release', snapshotRepo: 'libs-snapshot'
-  rtMaven.deployer server: artServer, releaseRepo: 'libs-release-local', snapshotRepo: 'libs-snapshot-local'
+  rtMaven.deployer server: artServer, releaseRepo: 'libs-snapshot-local', snapshotRepo: 'libs-snapshot-local'
   rtMaven.tool = 'maven'
    rtMaven.run pom: 'maven-example/pom.xml', goals: 'clean install', buildInfo: buildInfo
    // Mark the code checkout 'stage'....
