--- a/docker-framework/Jenkinsfile
+++ b/docker-framework/Jenkinsfile
@@ -1,9 +1,8 @@
 
-
 node {
 
    // Get some code from a GitHub repository
-  git url: 'https://github.com/lyqwaterway/docker-lifecycle-scripts.git'
+  git url: 'https://gitlab.com/yongqiang/docker-lifecycle-scripts.git'
   def artServer = Artifactory.server('artiha-demo')
   withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'art-docker-ci',
   usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD']]) {
@@ -73,7 +72,7 @@ node {
   }
 }
 node {
-  git url: 'https://github.com/lyqwaterway/docker-lifecycle-scripts'
+  git url: 'https://gitlab.com/yongqiang/docker-lifecycle-scripts.git'
   def artServer = Artifactory.server('artiha-demo')
   withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'art-docker-ci',
   usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD']]) {
