--- a/docker-app/Jenkinsfile
+++ b/docker-app/Jenkinsfile
@@ -92,8 +92,8 @@ def curlstr="curl -u"+uname+':'+pw+" 'http://beijing.artifactory.com/artifactory
         stage('Staging') {
             def promotionConfig1 = [
                 // Mandatory parameters
-                'buildName'          : $JOB_NAME,
-                'buildNumber'        : $BUILD_NUMBER,
+                'buildName'          : buildInfo.name,
+                'buildNumber'        : buildInfo.number,
                 'targetRepo'         : 'libs-stage-local',
         
                 // Optional parameters
@@ -108,14 +108,14 @@ def curlstr="curl -u"+uname+':'+pw+" 'http://beijing.artifactory.com/artifactory
             ]
             def promotionConfig2 = [
                 // Mandatory parameters
-                'buildName'          : $JOB_NAME,
-                'buildNumber'        : $BUILD_NUMBER,
+                'buildName'          : buildInfo.name,
+                'buildNumber'        : buildInfo.number,
                 'targetRepo'         : 'libs-stage-local',
         
                 // Optional parameters
-                'comment'            : 'custom stage 1',
+                'comment'            : 'custom stage 2',
                 'sourceRepo'         : 'libs-snapshot-local',
-                'status'             : 'custom-stage1',
+                'status'             : 'custom-stage2',
                 'includeDependencies': false,
                 'copy'               : true,
                 // 'failFast' is true by default.
