--- a/docker-app/Jenkinsfile
+++ b/docker-app/Jenkinsfile
@@ -92,8 +92,8 @@ def curlstr="curl -u"+uname+':'+pw+" 'http://beijing.artifactory.com/artifactory
         stage('Staging') {
             def promotionConfig1 = [
                 // Mandatory parameters
-                'buildName'          : $JOB_NAME,
-                'buildNumber'        : $BUILD_NUMBER,
+                'buildName'          : env.JOB_NAME,
+                'buildNumber'        : env.BUILD_NUMBER,
                 'targetRepo'         : 'libs-stage-local',
         
                 // Optional parameters
@@ -108,8 +108,8 @@ def curlstr="curl -u"+uname+':'+pw+" 'http://beijing.artifactory.com/artifactory
             ]
             def promotionConfig2 = [
                 // Mandatory parameters
-                'buildName'          : $JOB_NAME,
-                'buildNumber'        : $BUILD_NUMBER,
+                'buildName'          : env.JOB_NAME,
+                'buildNumber'        : env.BUILD_NUMBER,
                 'targetRepo'         : 'libs-stage-local',
         
                 // Optional parameters
