--- a/docker-framework/Jenkinsfile
+++ b/docker-framework/Jenkinsfile
@@ -1,7 +1,7 @@
 node {
 
    // Get some code from a GitHub repository
-  git url: 'git@gitlab.com:yongqiang/docker-lifecycle-scripts.git'
+  git url: 'git@gitlab.com:yongqiang/docker-lifecycle-scripts.git', branch: 'demo-h3c'
   def artServer = Artifactory.server('artiha-demo')
   withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'art-docker-ci',
   usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD']]) {
@@ -9,7 +9,7 @@ node {
     def pw=env.PASSWORD
     artServer.username=uname
     artServer.password=pw
-    def curlstr="curl -u"+uname+':'+pw+" 'http://beijing.artifactory.com/artifactory/"
+    def curlstr="curl -u"+uname+':'+pw+" 'http://47.93.114.82//artifactory/"
     def artDocker= Artifactory.docker(uname, pw)
     def buildInfo = Artifactory.newBuildInfo()
     dir('docker-framework') {
@@ -49,17 +49,17 @@ node {
       stage('docker build') {
         buildInfo.env.collect()
         println('starting build '+env.BUILD_NUMBER)
-        def tagName='beijing.artifactory.com:5002/docker-framework:'+env.BUILD_NUMBER
+        def tagName='47.93.114.82:5002/docker-framework:'+env.BUILD_NUMBER
         sh 'pwd'
         sh 'ls -al'
         sh 'cat Dockerfile'
         docker.build(tagName)
        // artDocker.push(tagName, 'docker-dev-local2', buildInfo)
         sh 'docker push ' + tagName
-         def tagName2='beijing.artifactory.com:5001/docker-framework:'+env.BUILD_NUMBER
+         def tagName2='47.93.114.82:5001/docker-framework:'+env.BUILD_NUMBER
         sh 'docker tag ' + tagName + ' ' + tagName2
         sh 'docker push ' + tagName2
-        //sh 'docker push beijing.artifactory.com:5001/docker-framework:'+env.BUILD_NUMBER
+        //sh 'docker push 47.93.114.82:5001/docker-framework:'+env.BUILD_NUMBER
         artServer.publishBuildInfo(buildInfo)
         println('Retagging Image')
         sh 'sed -E "s/@/$BUILD_NUMBER/" retag-dev > retag_out_dev.json'
@@ -71,7 +71,7 @@ node {
   }
 }
 node {
-  git url: 'git@gitlab.com:yongqiang/docker-lifecycle-scripts.git'
+  git url: 'git@gitlab.com:yongqiang/docker-lifecycle-scripts.git', branch: 'demo-h3c'
   def artServer = Artifactory.server('artiha-demo')
   withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'art-docker-ci',
   usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD']]) {
@@ -79,7 +79,7 @@ node {
     def pw=env.PASSWORD
     artServer.username=uname
     artServer.password=pw
-    def curlstr="curl -u"+uname+':'+pw+" 'http://beijing.artifactory.com/artifactory/"
+    def curlstr="curl -u"+uname+':'+pw+" 'http://47.93.114.82/artifactory/"
     def artDocker= Artifactory.docker(uname, pw)
     dir('docker-framework/framework-test')
     {
@@ -99,7 +99,7 @@ node {
 }""" //"//DownloadSpec
         println(downloadSpecWar)
         artServer.download(downloadSpecWar)
-        def tagNameTest='beijing.artifactory.com:5002/docker-framework-test:'+env.BUILD_NUMBER
+        def tagNameTest='47.93.114.82:5002/docker-framework-test:'+env.BUILD_NUMBER
         docker.build(tagNameTest)
         docker.image(tagNameTest).withRun('-p 8181:8181') {c ->
           sleep 5
