--- a/docker-framework/framework-test/Dockerfile
+++ b/docker-framework/framework-test/Dockerfile
@@ -2,6 +2,6 @@ FROM 47.93.114.82:5002/docker-framework:latest
 
 MAINTAINER Mark Galpin markg@jfrog.com
 
-ADD war/*.war /home/exec/tomcat/webapps/swampup.war
+ADD war/*.war /home/exec/apache-tomcat-8.5.5/webapps/swampup.war
 
-CMD /bin/bash -c cd /home/exec; /home/exec/tomcat/bin/catalina.sh run
+CMD /bin/bash -c cd /home/exec; /home/exec/apache-tomcat-8.5.5/bin/catalina.sh run
