--- a/docker-app/Jenkinsfile
+++ b/docker-app/Jenkinsfile
@@ -16,7 +16,7 @@ node {
    // Mark the code checkout 'stage'....
    stage('Checkout Docker') {
    // Get some code from a GitHub repository
-   git url: 'git@gitlab.com:yongqiang/docker-lifecycle-scripts.git'
+   git url: 'git@gitlab.com:yongqiang/docker-lifecycle-scripts.git', branch: 'demo-h3c'
    }
    //def artServer = Artifactory.server('jfrogtraining')
    //def buildInfo = Artifactory.newBuildInfo()
@@ -28,7 +28,7 @@ def pw=env.PASSWORD
 artServer.username=uname
 artServer.password=pw
  sh 'echo credentials applied'
- def curlstr="curl -u"+uname+':'+pw+" 'http://beijing.artifactory.com/artifactory/"
+ def curlstr="curl -u"+uname+':'+pw+" 'http://47.93.114.82/artifactory/"
 dir('docker-app') {
    stage('Resolve') {
        def warverstr=curlstr+ "api/search/latestVersion?g=org.jfrog.test&a=multi3&repos=libs-snapshot-local'"
@@ -47,25 +47,19 @@ dir('docker-app') {
     artServer.download(downloadSpec, buildInfo)
    }
    stage('Build and Deploy') {
-        def tagName='beijing.artifactory.com:5002/docker-app:'+env.BUILD_NUMBER
+        def tagName='47.93.114.82:5002/docker-app:'+env.BUILD_NUMBER
         docker.build(tagName)
         def artDocker= Artifactory.docker(uname, pw)
-        //artDocker.push(tagName, 'docker-dev-local2', buildInfo)
-        sh 'docker push ' + tagName
-        def tagName2='beijing.artifactory.com:5001/docker-app:'+env.BUILD_NUMBER
-        sh 'docker tag ' + tagName + ' ' + tagName2
-        sh 'docker push ' + tagName2
+        artDocker.push(tagName, 'docker-dev-local2', buildInfo)
+
         artServer.publishBuildInfo(buildInfo)
-        //sh 'sed -E "s/@/$BUILD_NUMBER/" retag.json > retag_out.json'
-        //sh 'cat retag_out.json'
-        //def retagstr=curlstr+"api/docker/docker-dev-local/v2/promote' -X POST -H 'Content-Type: application/json' -T retag_out.json"
-        //sh retagstr
+        
    }
 }
 }
 }
 node {
-    git url: 'git@gitlab.com:yongqiang/docker-lifecycle-scripts.git'
+    git url: 'git@gitlab.com:yongqiang/docker-lifecycle-scripts.git',branch: 'demo-h3c'
     def artServer = Artifactory.server('artiha-demo')
     withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'art-docker-ci',
 usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD']]) {
@@ -74,20 +68,20 @@ def pw=env.PASSWORD
 artServer.username=uname
 artServer.password=pw
         def artDocker= Artifactory.docker(uname, pw)
-def curlstr="curl -u"+uname+':'+pw+" 'http://beijing.artifactory.com/artifactory/"
+def curlstr="curl -u"+uname+':'+pw+" 'http://47.93.114.82/artifactory/"
     dir('docker-app/app-test') {
         stage('testing app') {
-            def imageName='beijing.artifactory.com:5002/docker-app'+':'+env.BUILD_NUMBER
+            def imageName='47.93.114.82:5002/docker-app'+':'+env.BUILD_NUMBER
             sh 'docker images | grep docker-app'
             println(imageName)
-            //sh 'docker rmi '+imageName+' || true'
-            //artDocker.pull(imageName)
-            //docker.withRegistry('https://jfrogtraining-docker-dev.jfrog.io/', 'art-docker-ci') {
+            sh 'docker rmi '+imageName+' || true'
+            artDocker.pull(imageName)
+           
                 docker.image(imageName).withRun('-p 8181:8181') {c ->
                     sleep 5
                     sh 'curl "http://localhost:8181/swampup/"'
                 }
-            //}
+            
         }
         stage('Staging') {
             def promotionConfig1 = [
