--- a/docker-framework/Jenkinsfile
+++ b/docker-framework/Jenkinsfile
@@ -49,17 +49,13 @@ node {
       stage('docker build') {
         buildInfo.env.collect()
         println('starting build '+env.BUILD_NUMBER)
-        def tagName='47.93.114.82:5002/docker-framework:'+env.BUILD_NUMBER
+        def tagName='docker-dev-local2.demo.jfrogchina.com/docker-framework:'+env.BUILD_NUMBER
         sh 'pwd'
         sh 'ls -al'
         sh 'cat Dockerfile'
         docker.build(tagName)
         artDocker.push(tagName, 'docker-dev-local2', buildInfo)
-        //sh 'docker push ' + tagName
-         //def tagName2='47.93.114.82:5001/docker-framework:'+env.BUILD_NUMBER
-        //sh 'docker tag ' + tagName + ' ' + tagName2
-        //sh 'docker push ' + tagName2
-        //sh 'docker push 47.93.114.82:5001/docker-framework:'+env.BUILD_NUMBER
+    
         artServer.publishBuildInfo(buildInfo)
         println('Retagging Image')
         sh 'sed -E "s/@/$BUILD_NUMBER/" retag-dev > retag_out_dev.json'
@@ -99,7 +95,7 @@ node {
 }""" //"//DownloadSpec
         println(downloadSpecWar)
         artServer.download(downloadSpecWar)
-        def tagNameTest='47.93.114.82:5002/docker-framework-test:'+env.BUILD_NUMBER
+        def tagNameTest='docker-dev-local2.demo.jfrogchina.com/docker-framework-test:'+env.BUILD_NUMBER
         docker.build(tagNameTest)
         docker.image(tagNameTest).withRun('-p 8181:8181') {c ->
           sleep 5
