--- a/docker-app/Jenkinsfile
+++ b/docker-app/Jenkinsfile
@@ -47,14 +47,11 @@ dir('docker-app') {
     artServer.download(downloadSpec, buildInfo)
    }
    stage('Build and Deploy') {
-        def tagName='beijing.artifactory.com:5002/docker-app:'+env.BUILD_NUMBER
+        def tagName='docker-dev-local2.demo.jfrogchina..com/docker-app:'+env.BUILD_NUMBER
         docker.build(tagName)
         def artDocker= Artifactory.docker(uname, pw)
-        //artDocker.push(tagName, 'docker-dev-local2', buildInfo)
-        sh 'docker push ' + tagName
-        def tagName2='beijing.artifactory.com:5001/docker-app:'+env.BUILD_NUMBER
-        sh 'docker tag ' + tagName + ' ' + tagName2
-        sh 'docker push ' + tagName2
+        artDocker.push(tagName, 'docker-dev-local2', buildInfo)
+        
         artServer.publishBuildInfo(buildInfo)
         //sh 'sed -E "s/@/$BUILD_NUMBER/" retag.json > retag_out.json'
         //sh 'cat retag_out.json'
@@ -89,45 +86,7 @@ def curlstr="curl -u"+uname+':'+pw+" 'http://beijing.artifactory.com/artifactory
                 }
             //}
         }
-        stage('Staging') {
-            def promotionConfig1 = [
-                // Mandatory parameters
-                'buildName'          : env.JOB_NAME,
-                'buildNumber'        : env.BUILD_NUMBER,
-                'targetRepo'         : 'libs-stage-local',
         
-                // Optional parameters
-                'comment'            : 'custom stage 1',
-                'sourceRepo'         : 'libs-snapshot-local',
-                'status'             : 'custom-stage1',
-                'includeDependencies': false,
-                'copy'               : true,
-                // 'failFast' is true by default.
-                // Set it to false, if you don't want the promotion to abort upon receiving the first error.
-                'failFast'           : true
-            ]
-            def promotionConfig2 = [
-                // Mandatory parameters
-                'buildName'          : env.JOB_NAME,
-                'buildNumber'        : env.BUILD_NUMBER,
-                'targetRepo'         : 'libs-stage-local',
-        
-                // Optional parameters
-                'comment'            : 'custom stage 2',
-                'sourceRepo'         : 'libs-snapshot-local',
-                'status'             : 'custom-stage2',
-                'includeDependencies': false,
-                'copy'               : true,
-                // 'failFast' is true by default.
-                // Set it to false, if you don't want the promotion to abort upon receiving the first error.
-                'failFast'           : true
-            ]
-
-            // Promote build
-            artServer.promote promotionConfig1
-            artServer.promote promotionConfig2
-           
-        }
         stage('Promotions') {
             def promotestr=curlstr+"api/build/promote/$JOB_NAME/$BUILD_NUMBER' -X POST -H 'Content-Type: application/vnd.org.jfrog.artifactory.build.PromotionRequest+json' "
             def dockerstr=promotestr + "-T promote-docker.json"
