--- a/docker-app/Jenkinsfile
+++ b/docker-app/Jenkinsfile
@@ -74,7 +74,7 @@ artServer.password=pw
 def curlstr="curl -u"+uname+':'+pw+" 'http://beijing.artifactory.com/artifactory/"
     dir('docker-app/app-test') {
         stage('testing app') {
-            def imageName='beijing.artifactory.com:5002/docker-app'+':'+env.BUILD_NUMBER
+            def imageName='docker-dev-local2.artifactory.com:/docker-app'+':'+env.BUILD_NUMBER
             sh 'docker images | grep docker-app'
             println(imageName)
             //sh 'docker rmi '+imageName+' || true'
