--- a/docker-app/Jenkinsfile
+++ b/docker-app/Jenkinsfile
@@ -12,11 +12,11 @@ node {
   rtMaven.resolver server: artServer, releaseRepo: 'libs-release', snapshotRepo: 'libs-snapshot'
   rtMaven.deployer server: artServer, releaseRepo: 'libs-snapshot-local', snapshotRepo: 'libs-snapshot-local'
   rtMaven.tool = 'maven'
-   rtMaven.run pom: 'maven-example/pom.xml', goals: 'install', buildInfo: buildInfo
+   rtMaven.run pom: 'maven-example/pom.xml', goals: 'clean install', buildInfo: buildInfo
    // Mark the code checkout 'stage'....
    stage('Checkout Docker') {
    // Get some code from a GitHub repository
-   git url: 'git@gitlab.com:yongqiang/docker-lifecycle-scripts.git', branch: 'demo-h3c'
+   git url: 'git@gitlab.com:yongqiang/docker-lifecycle-scripts.git'
    }
    //def artServer = Artifactory.server('jfrogtraining')
    //def buildInfo = Artifactory.newBuildInfo()
@@ -47,19 +47,22 @@ dir('docker-app') {
     artServer.download(downloadSpec, buildInfo)
    }
    stage('Build and Deploy') {
-        def tagName='47.93.114.82:5002/docker-app:'+env.BUILD_NUMBER
+        def tagName='docker-dev-local2.demo.jfrogchina..com/docker-app:'+env.BUILD_NUMBER
         docker.build(tagName)
         def artDocker= Artifactory.docker(uname, pw)
         artDocker.push(tagName, 'docker-dev-local2', buildInfo)
-
-        artServer.publishBuildInfo(buildInfo)
         
+        artServer.publishBuildInfo(buildInfo)
+        //sh 'sed -E "s/@/$BUILD_NUMBER/" retag.json > retag_out.json'
+        //sh 'cat retag_out.json'
+        //def retagstr=curlstr+"api/docker/docker-dev-local/v2/promote' -X POST -H 'Content-Type: application/json' -T retag_out.json"
+        //sh retagstr
    }
 }
 }
 }
 node {
-    git url: 'git@gitlab.com:yongqiang/docker-lifecycle-scripts.git',branch: 'demo-h3c'
+    git url: 'git@gitlab.com:yongqiang/docker-lifecycle-scripts.git'
     def artServer = Artifactory.server('artiha-demo')
     withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'art-docker-ci',
 usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD']]) {
@@ -71,57 +74,19 @@ artServer.password=pw
 def curlstr="curl -u"+uname+':'+pw+" 'http://47.93.114.82/artifactory/"
     dir('docker-app/app-test') {
         stage('testing app') {
-            def imageName='47.93.114.82:5002/docker-app'+':'+env.BUILD_NUMBER
+            def imageName='docker-dev-local2.artifactory.com:/docker-app'+':'+env.BUILD_NUMBER
             sh 'docker images | grep docker-app'
             println(imageName)
-            sh 'docker rmi '+imageName+' || true'
-            artDocker.pull(imageName)
-           
+            //sh 'docker rmi '+imageName+' || true'
+            //artDocker.pull(imageName)
+            //docker.withRegistry('https://jfrogtraining-docker-dev.jfrog.io/', 'art-docker-ci') {
                 docker.image(imageName).withRun('-p 8181:8181') {c ->
                     sleep 5
                     sh 'curl "http://localhost:8181/swampup/"'
                 }
-            
+            //}
         }
-        stage('Staging') {
-            def promotionConfig1 = [
-                // Mandatory parameters
-                'buildName'          : env.JOB_NAME,
-                'buildNumber'        : env.BUILD_NUMBER,
-                'targetRepo'         : 'libs-stage-local',
         
-                // Optional parameters
-                'comment'            : 'custom stage 1',
-                'sourceRepo'         : 'libs-snapshot-local',
-                'status'             : 'custom-stage1',
-                'includeDependencies': false,
-                'copy'               : true,
-                // 'failFast' is true by default.
-                // Set it to false, if you don't want the promotion to abort upon receiving the first error.
-                'failFast'           : true
-            ]
-            def promotionConfig2 = [
-                // Mandatory parameters
-                'buildName'          : env.JOB_NAME,
-                'buildNumber'        : env.BUILD_NUMBER,
-                'targetRepo'         : 'libs-stage-local',
-        
-                // Optional parameters
-                'comment'            : 'custom stage 2',
-                'sourceRepo'         : 'libs-snapshot-local',
-                'status'             : 'custom-stage2',
-                'includeDependencies': false,
-                'copy'               : true,
-                // 'failFast' is true by default.
-                // Set it to false, if you don't want the promotion to abort upon receiving the first error.
-                'failFast'           : true
-            ]
-
-            // Promote build
-            artServer.promote promotionConfig1
-            artServer.promote promotionConfig2
-           
-        }
         stage('Promotions') {
             def promotestr=curlstr+"api/build/promote/$JOB_NAME/$BUILD_NUMBER' -X POST -H 'Content-Type: application/vnd.org.jfrog.artifactory.build.PromotionRequest+json' "
             def dockerstr=promotestr + "-T promote-docker.json"
