--- a/docker-app/Jenkinsfile
+++ b/docker-app/Jenkinsfile
@@ -47,7 +47,7 @@ dir('docker-app') {
     artServer.download(downloadSpec, buildInfo)
    }
    stage('Build and Deploy') {
-        def tagName='docker-dev-local2.demo.jfrogchina..com/docker-app:'+env.BUILD_NUMBER
+        def tagName='docker-dev-local2.demo.jfrogchina.com/docker-app:'+env.BUILD_NUMBER
         docker.build(tagName)
         def artDocker= Artifactory.docker(uname, pw)
         artDocker.push(tagName, 'docker-dev-local2', buildInfo)
