--- a/docker-framework/Jenkinsfile
+++ b/docker-framework/Jenkinsfile
@@ -54,7 +54,9 @@ node {
         sh 'ls -al'
         sh 'cat Dockerfile'
         docker.build(tagName)
+        buildInfo.env.vars['status2'] = 'pre-test'
         artDocker.push(tagName, 'docker-dev-local2', buildInfo)
+
         artDocker.deployer.addProperty("status", "in-qa").addProperty("compatibility", "1", "2", "3")
         artServer.publishBuildInfo(buildInfo)
         println('Retagging Image')
