--- a/docker-app/Jenkinsfile
+++ b/docker-app/Jenkinsfile
@@ -4,7 +4,7 @@ node {
   artServer.credentialsId='art-docker-ci'
   def buildInfo = Artifactory.newBuildInfo()
   stage 'Checkout MAVEN'
-  git url: 'git@gitlab.com:yongqiang/project-examples.git'
+  git url: 'git@gitlab.com:yongqiang/project-examples.git', credentialsId: 'lyqwaterway'
   
   stage 'Build Maven'
   def rtMaven = Artifactory.newMavenBuild()
@@ -16,7 +16,7 @@ node {
    // Mark the code checkout 'stage'....
    stage('Checkout Docker') {
    // Get some code from a GitHub repository
-   git url: 'git@gitlab.com:yongqiang/docker-lifecycle-scripts.git' , branch: 'demo-h3c'
+   git url: 'git@gitlab.com:yongqiang/docker-lifecycle-scripts.git' , branch: 'demo-h3c', credentialsId: 'lyqwaterway'
    }
    //def artServer = Artifactory.server('jfrogtraining')
    //def buildInfo = Artifactory.newBuildInfo()
@@ -62,7 +62,7 @@ dir('docker-app') {
 }
 }
 node {
-    git url: 'git@gitlab.com:yongqiang/docker-lifecycle-scripts.git', branch: 'demo-h3c'
+    git url: 'git@gitlab.com:yongqiang/docker-lifecycle-scripts.git', branch: 'demo-h3c', credentialsId: 'lyqwaterway'
     def artServer = Artifactory.server('artiha-demo')
     withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'art-docker-ci',
 usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD']]) {
