--- a/docker-framework/Jenkinsfile
+++ b/docker-framework/Jenkinsfile
@@ -116,6 +116,7 @@ node {
           'sourceRepo'         : 'docker-dev-local2',
           'status'             : 'Released',
           'includeDependencies': false,
+          'dryRun'             : false,
           'copy'               : true
         ]
 
