write testResult back to artifactory

--- a/docker-app/Jenkinsfile
+++ b/docker-app/Jenkinsfile
@@ -87,11 +87,11 @@ def curlstr="curl -u"+uname+':'+pw+" 'http://47.93.114.82/artifactory/"
                 }
             //}
         
-            def testWarResult = curlstr+"api/storage/libs-snapshot-local/org/jfrog/test/multi3/"+env.WARVER+"/multi3-"+env.WARVER+".war?properties=qa.test=approved;qa.approver=system' -X PUT"
+            def testWarResult = curlstr+"api/storage/libs-snapshot-local/org/jfrog/test/multi3/"+env.WARVER+"/multi3-"+env.WARVER+".war?properties=qa.testType=junit;qa.testType=selenium;qa.status=approved;' -X PUT"
             println("write testResult back:" + testWarResult);
             sh testWarResult;
 
-            def testDockerResult = curlstr+"api/storage/docker-dev-local2/docker-app/"+env.BUILD_NUMBER+"/manifest.json?properties=qa.test=approved;qa.approver=system' -X PUT"
+            def testDockerResult = curlstr+"api/storage/docker-dev-local2/docker-app/"+env.BUILD_NUMBER+"/manifest.json?properties=qa.testType=junit;qa.testType=selenium;qa.status=approved;' -X PUT"
             println("write testResult back:" + testDockerResult);
             sh testDockerResult;
 
