write testResult back to artifactory

--- a/docker-app/Jenkinsfile
+++ b/docker-app/Jenkinsfile
@@ -139,7 +139,7 @@ def curlstr="curl -u"+uname+':'+pw+" 'http://47.93.114.82/artifactory/"
               sh "ansible production -m command -a 'docker rmi docker-release-local2.demo.jfrogchina.com/docker-app:latest'"
               sh "ansible production -m command -a 'docker run -d --name docker-app -p 9999:8181 docker-release-local2.demo.jfrogchina.com/docker-app:latest'"
 
-              def deployResult = curlstr+"api/storage/docker-release-local2/docker-app/latest/manifest.json?properties=deploy.server=production;deploy.operator=system' -X PUT"
+              def deployResult = curlstr+"api/storage/docker-release-local2/docker-app/latest/manifest.json?properties=deploy.server=production;deploy.warVersion=multi3-"+env.WARVER+";deploy.dockerTag="+env.BUILD_NUMBER+"' -X PUT"
               println("write deployResult back:" + deployResult);
               sh deployResult;
             }
